--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
     "yargs": "^16.0.3"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.6.3",
+    "@mantine/hooks": "^5.6.3",
+    "@mantine/notifications": "^5.6.3",
     "classnames": "^2.2.6",
     "color": "^3.1.2",
     "faker": "^4.1.0",
