--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Omatsuri",
+  "name": "DIY Tools",
   "version": "1.0.0",
   "description": "Open source frontend focused tools",
   "repository": "https://github.com/rtivital/tools.git",
