--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DIY Tools",
+  "name": "DIYtools",
   "version": "1.0.0",
   "description": "Open source frontend focused tools",
   "repository": "https://github.com/rtivital/tools.git",
@@ -70,6 +70,7 @@
     "classnames": "^2.2.6",
     "color": "^3.1.2",
     "faker": "^4.1.0",
+    "file-saver": "^2.0.5",
     "fuse.js": "^6.4.1",
     "lorem-ipsum": "^2.0.3",
     "normalize.css": "^8.0.1",
@@ -83,6 +84,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
+    "react-peeps": "^0.1.10",
     "react-router-dom": "^5.2.0",
     "samuel-ipsum": "^1.0.11",
     "svg-to-jsx": "^1.0.2",
