--- a/package.json
+++ b/package.json
@@ -84,9 +84,11 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
+    "react-icons": "^4.6.0",
     "react-peeps": "^0.1.10",
     "react-router-dom": "^5.2.0",
     "samuel-ipsum": "^1.0.11",
+    "supercons": "^0.0.1",
     "svg-to-jsx": "^1.0.2",
     "svgo-browser": "^1.3.7",
     "uuid": "^8.3.0",
